src/widgets/splitter/snapshots/tvision__widgets__splitter__view_tests__dividers_line_style.snap
---
source: src/widgets/splitter/mod.rs
expression: "render(&mut sp, 13, 3)"
---
size: 13x3
cursor: hidden
text:
|AAAAAA│BBBBBB|
|AAAAAA│BBBBBB|
|AAAAAA│BBBBBB|
attr:
|aaaaaabaaaaaa|
|aaaaaabaaaaaa|
|aaaaaabaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
  b fg=RGB(170,170,170) bg=RGB(0,0,170)
