src/widgets/splitter/snapshots/tvision__widgets__splitter__view_tests__per_divider_override_renders.snap
---
source: src/widgets/splitter/mod.rs
expression: "render(&mut sp, 14, 1)"
---
size: 14x1
cursor: hidden
text:
|AAAA BBBB│CCCC|
attr:
|aaaa.aaaabaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
  b fg=RGB(170,170,170) bg=RGB(0,0,170)
