src/widgets/splitter/snapshots/tvision__widgets__splitter__view_tests__three_equal_columns_render.snap
---
source: src/widgets/splitter/mod.rs
expression: "render(&mut sp, 32, 4)"
---
size: 32x4
cursor: hidden
text:
|AAAAAAAAAA BBBBBBBBBB CCCCCCCCCC|
|AAAAAAAAAA BBBBBBBBBB CCCCCCCCCC|
|AAAAAAAAAA BBBBBBBBBB CCCCCCCCCC|
|AAAAAAAAAA BBBBBBBBBB CCCCCCCCCC|
attr:
|aaaaaaaaaa.aaaaaaaaaa.aaaaaaaaaa|
|aaaaaaaaaa.aaaaaaaaaa.aaaaaaaaaa|
|aaaaaaaaaa.aaaaaaaaaa.aaaaaaaaaa|
|aaaaaaaaaa.aaaaaaaaaa.aaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
